tests/macro_syntax/fields_with_no_attribute.rs
use const_init::ConstInit;

#[derive(ConstInit)]
struct FooBar {
    #[const_init(value = true)]
    foo: bool,
    bar: usize,
}

fn main() {}
